<resources>
    <string name="app_name">Kurrency</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="date">Date</string>
    <string name="currencys">Currencys</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">Profile</string>
    <string name="surName">SurName</string>
    <string name="givenName">GivenName</string>
    <string name="birthDay">BirthDay</string>
</resources>