<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewValutaName"
            android:layout_width="114dp"
            android:layout_height="32dp"

            android:textStyle="bold"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textViewValutaValue"
            android:layout_width="113dp"
            android:layout_height="43dp"

            android:textStyle="bold"
            android:text="@string/value" />

        <TextView
            android:id="@+id/textViewValutaDate"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.cardview.widget.CardView>